Archive2/1a/c5e4c24a947407/output
main.cpp: In function 'int main()':
main.cpp:93:43: error: invalid operands of types 'char' and '__gnu_cxx::__promote_2<int, unsigned int, double, double>::__type {aka double}' to binary 'operator%'
         cout << s[i] - '0' % pow(10, i + 1) * pow(10, size - 1) << endl;
                                           ^
main.cpp:90:14: warning: unused variable 'sum' [-Wunused-variable]
     unsigned sum = 0;
              ^
